# pygama

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  clear_cache.sh  codecov.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tests.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: distribution.yml  docs.yml  get-dependencies.sh  main.yml
apps/: Am241_Analysis.py  AoE.py  Ba_Analysis.py  calibration.py  dcr_plot.ipynb  detectordb.py  dsp_wf_plot.ipynb  energy_cal.py  lpgta_params.json  optimizer.py  params.json  process_dsp.py  processing.py  raw_to_dsp.py  waveforms.py
attic/: dsp_config.json  metadata.py
attic/apps/: README.md  channelmapdbparser.py  lpgta_g034_pks.json  optimize_pz.py  process_dsp.py  processing.py
attic/experiments/: .gitignore
attic/sandbox/: README.md  base_calculators.py  base_transforms.py  compass_wfs.py  h5parser.py  test_wfc.py  uproot_mjd.py  uproot_test.py  vec1.py  vector.py
cygama/: bindings.cpp  sigcompress.cc  sigcompress.h  test.cc  test.cpp  test.h
docs/: Makefile  README.md  hdf5_spec.md  hdf5_spec.md.html  make.bat  readme.md
docs/source/: .py_api_exclude  conf.py  contributing.rst  developer.rst  index.rst  install.rst  moduledoc.rst  modules.rst  overview.rst  pygama.analysis.rst  pygama.decoders.rst  pygama.dsp.rst  pygama.hit.rst  pygama.io.rst  pygama.lgdo.rst  pygama.lh5.rst  pygama.processing.rst  pygama.raw.rst  pygama.rst  pygama.sandbox.rst  tutorials.rst  waveformdoc.rst
examples/: README.txt  cfd_test.py  hist_fits.py  ipygama.ipynb  ipygama2.ipynb  one_run.py  pygama_demo.ipynb  t2_run42343.h5  t2_run72.h5  test_pygama.py  tier_test.py  vec2.py  vector_test.py
experiments/apps/: processing.py  skimmer.py  wave_view.py
experiments/coherent/: README.md  process_test.py  testDB.json  transforms.py
experiments/datagroup/: CAGE.json  CAGE_runDB.json  HADES_dsp.json  LPGTA_dsp.json  SURFCHAR.json  processing.py  test_datagroup.py
experiments/example/: create_dsp_df.py  hist_fits.py  lngs_tutorial.ipynb  lngs_tutorial.py  process_test.py  testDB.json  view_wfs.py
experiments/hades/: HADES.json  HADES_AoE.py  README.txt  calibration.py  processTiers.py  processing.py  runDB_example.json
experiments/hades_test/: config_dsp.json  energy_cal.py  hades.json  processing.py  psd_analysis.py  runDB.json  setup.py
experiments/lar_commissioning/: .gitignore  README.md  afterprocessing_example.ipynb  database.json  processing.py  processors.json  setup.py
experiments/lh5/: README.md  config.json  flashcam.py  h5parser.py  processing.py
experiments/lh5_update/: print_times.py
experiments/lpgta/: .gitignore  CAGE.json  CAGE_runDB.json  HADES.json  LPGTA.json  LPGTA_dsp.json  LPGTA_r0019_phy_geds_calib.json  LPGTA_runDB.json  ORNL.json  README.md  calibration.py  config_ecal.json  crosstalk.py  data_dir_setup.py  datagroup_setup.py  dqc.py  dsp_to_hit.py  ecalDB.json  energy_cal.py  file_checks.py  gamma_lines.txt  gen_metadata.py  matplotlibrc  noise.py  optimization.py  processing.py  processors.json  pz_average.py  pz_energy.py  pz_preliminary.py  pz_time.py  resolution.py  scatter.py  setup.py  slurm.sh  slurm_log.py  submit-slurm.sh  template.json  test_datagroup.py  testing.py
experiments/mj60/: .runDB.json.swp  2d_plots.py  Ac_spectra.py  AoE.py  AvsE.py  AvsE_Th232.py  MakeGuessTemplate.py  MultiPeakFitter.py  V_HV3.txt  analyze_data.py  bias_runs.py  bkg_calibration.py  c_eff.py  calDB.json  calDB_pretty.json  calibration.py  campaign.py  combine_tier_files.py  dead_time.py  double_gauss.py  energy_resolution.py  fit_bkg_peaks.py  fit_calibrated_peaks.py  fit_peaks.py  fitresults.py  histogram.py  learn.py  mj60.conf  noise_test.py  non_linear_calibration.py  opt_filt_test.py  optimizer.py  preamp_test.py  process_data.py  processed.hdf5  processing.py  residuals.py  root_fit_bkg_peaks.py  root_hist.py  runDB.json  (+9 more)
experiments/mjd/: runDB.json
experiments/ncsu/: processing.py  runDB.json
experiments/oppi/: auto_cal.py  config_dsp.json  config_ecal.json  datagroup_setup.py  db_test.json  db_test.py  ecal_config.json  ecal_db.py  ecal_spec.json  ecaldb_example.json  energy_cal.py  oppi.json  oppi_dsp.json  oppi_ecalDB.json  oppi_runDB.json  processing.py  psd_analysis.py  setup.py  ts_wrap.py
experiments/scarf/: byHand.py  config.json  newViewer.py  process_test.py.bak  processing.py  testDB.json  test_readme.txt  viewTier1.py  xxx.txt
experiments/teststand/: README.md  analysis.ipynb  lngs_tutorial.ipynb  testDB.json
experiments/tumbsi/: AvsE.py  PSA.py  README.md  analysis.ipynb  calibration.py  fit_calibrated_peaks.py  process_test.py  runDB.json  testDB.json
pygama/: README.md  __init__.py  clint.mpl  datagroup.py  dataset.py  filters.py  lh5.py  module.py  onerun.py  processor_list.json  pygama.mplstyle  root.mpl  test.py  transforms.c  transforms.pyx  utils.py  waveform.py
pygama/ana/: peak_fitting.py
pygama/analysis/: calculators.py  calibration.py  data_cleaning.py  databases.py  datagroup.py  dataset.py  histograms.py  peak_fitting.py  pulse_shape_analysis.py
pygama/daq/: README.md  ch_group.py  fcdaq.py  llamadaq.py  orca_digitizers.py
pygama/decoders/: README.md  __init__.py  data_loading.py  dataloading.py  digitizers.py  pollers.py  xml_parser.py
pygama/dsp/: ProcessingChain.py  README.md  WaveformBrowser.py  __init__.py  base.py  build_dsp.py  build_processing_chain.py  calculators.py  dsp_base.py  dsp_optimize.py  errors.py  intercom.py  intercom_transforms.py  legend_units.py  processing_chain.py  processor_list.json  processors.py  test.py  test_draw.py  test_optimize.py  transforms.py  units.py
pygama/flow/: datagroup.py
pygama/genpar/: cuts.py  ecal_th.py
pygama/hit/: README.md  __init__.py  (+2 more)
test/: README.md  pygama_test.py  test.py  test_tier_1.py
tests/: conftest.py  test_utils.py
tutorials/: DataProcessing.ipynb  HADESDataTutorial.ipynb  IntroToDSP.ipynb  LH5ParGridSearch.ipynb  WaveformBrowserTutorial.ipynb  WriteProcessors.ipynb
(+746 files in other folders)
