[build-system]
requires = [
    "setuptools>=42.0.0",
    "setuptools_scm[toml]>=3.4",
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pygama/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error", "ignore::DeprecationWarning"]
log_cli_level = "info"
testpaths = "tests"

[tool.isort]
profile = "black"
multi_line_output = 3
