[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=7",
]
build-backend = "setuptools.build_meta"

[project]
name = "pygama"
description = "Python package for data processing and analysis"
authors = [
    { name = "The LEGEND collaboration" },
]
maintainers = [
    { name = "The LEGEND collaboration" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "hist",
    "colorlog",
    "dbetto",
    "dspeed >=2.0",
    "h5py >=3.2",
    "iminuit",
    "legend-pydataobj >=1.16",
    "pylegendmeta >=0.9",
    "matplotlib",
    "numba !=0.53.*,!=0.54.*,!=0.57",
    "numpy >=1.21",
    "pandas >=1.4.4",
    "tables",
    "pint",
    "pyyaml",
    "scikit-learn",
    "scipy >=1.0.1",
    "tqdm >=4.66",
]
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/legend-exp/pygama"
"Bug Tracker" = "https://github.com/legend-exp/pygama/issues"
Discussions = "https://github.com/legend-exp/pygama/discussions"
Changelog = "https://github.com/legend-exp/pygama/releases"

[tool.setuptools_scm]
write_to = "src/pygama/_version.py"

[project.optional-dependencies]
all = [
    "pygama[docs,test]",
]
docs = [
    "furo",
    "jupyter",
    "myst-parser",
    "nbsphinx",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
]
test = [
    "pre-commit",
    "pylegendtestdata",
    "pytest>=6.0",
    "pytest-cov",
]

[project.scripts]
pygama = "pygama.cli:pygama_cli"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.setuptools.package-data]
"*" = [
    "*.json",
]

[tool.coverage]
run.source = ["pygama"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.codespell]
ignore-words-list = "hist, gaus, nd, ans, crate, nin, puls, spms, fom, FOM"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
testpaths = "tests"

[tool.ruff]
src = ["src"]
force-exclude = true
exclude = [
  "src/pygama/flow",
  "attic",
]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "EM",  # flake8-errmsg
  "ICN", # flake8-import-conventions
  "G",   # flake8-logging-format
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "RUF", # Ruff-specific
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "YTT", # flake8-2020
  "EXE", # flake8-executable
  "NPY", # NumPy specific rules
  "PD",  # pandas-vet
]
ignore = [
  "PLR09",  # Too many <...>
  "PLR2004", # Magic value used in comparison
  "ISC001",  # Conflicts with formatter
  "PT011",
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"docs/source/notebooks/*" = ["T201", "E402"]
