[metadata]
name = pygama
description = Python package for decoding and processing digitizer data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/pygama
author = The LEGEND collaboration
maintainer = The LEGEND collaboration
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
project_urls =
    Documentation = https://legend-exp.github.io/pygama

[options]
packages = find:
install_requires =
    h5py>=3.2.0
    iminuit
    matplotlib
    numba!=0.53.*,!=0.54.*
    numpy
    pandas
    parse
    pint
    pyfftw
    scipy
    tqdm
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pygama = pygama.cli:pygama_cli

[options.extras_require]
all =
    pygama[daq,docs,test]
daq =
    fcutils@git+https://github.com/legend-exp/pyfcutils@v0.1.0#egg=fcutils
docs =
    jupyter
    myst-parser
    pygama[daq]
    sphinx
    sphinx-copybutton
    sphinx-multiversion-pre-post-build>=0.2.4
    sphinx-rtd-theme
test =
    legend-testdata@git+https://github.com/legend-exp/legend-testdata-py@v0.2.0#egg=legend-testdata
    pre-commit
    pygama[daq]
    pytest>=6.0
    pytest-cov

[options.package_data]
* = *.json
