[metadata]
name = pygama
description = Python package for decoding and processing digitizer data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/pygama
author = The LEGEND collaboration
maintainer = The LEGEND collaboration
license = Apache-2.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
project_urls =
    Documentation = https://pygama.readthedocs.io

[options]
packages = find:
install_requires =
    colorlog
    h5py>=3.2.0
    iminuit
    matplotlib
    numba!=0.53.*,!=0.54.*
    numexpr
    numpy>=1.21
    pandas
    parse
    pint
    pyfcutils
    pyfftw
    pywavelets
    scikit-learn
    scipy
    tqdm
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pygama = pygama.cli:pygama_cli

[options.extras_require]
all =
    pygama[docs,test]
docs =
    furo
    jupyter
    myst-parser
    nbsphinx
    pygama
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
test =
    legend-testdata>=0.4.1
    pre-commit
    pygama
    pytest>=6.0
    pytest-cov

[options.package_data]
* = *.json

[flake8]
extend-ignore = E203, E501

[codespell]
ignore-words-list = hist, gaus, nd, ans, crate, nin, puls, spms, fom
