[metadata]
name = pygama
description = Python package for decoding and processing digitizer data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/pygama
author = The LEGEND collaboration
maintainer = The LEGEND collaboration
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
project_urls =
    Documentation = https://pygama.readthedocs.io

[options]
packages = find:
install_requires =
    colorlog
    dspeed==1.1.*
    h5py>=3.2
    iminuit
    legend-daq2lh5==1.0.*
    legend-pydataobj==1.1.*
    matplotlib
    numba!=0.53.*,!=0.54.*,!=0.57
    numpy>=1.21
    pandas>=1.4.4
    pint
    scikit-learn
    scipy>=1.0.1
    tables
    tqdm>=4.27
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pygama = pygama.cli:pygama_cli

[options.extras_require]
all =
    pygama[docs,test]
docs =
    furo
    jupyter
    myst-parser
    nbsphinx
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
test =
    pre-commit
    pylegendtestdata
    pytest>=6.0
    pytest-cov

[options.package_data]
* = *.json

[flake8]
extend-ignore = E203, E501

[codespell]
ignore-words-list = hist, gaus, nd, ans, crate, nin, puls, spms, fom
